# my_browser

./: .gitignore  README.md
my_browser/: CMakeLists.txt  main.cpp  my_browser.pro
my_browser/gui/: CMakeLists.txt
my_browser/gui/inc/: mainwindow.hpp  mainwindow.hpp~  mainwindow.h~
my_browser/gui/src/: mainwindow.cpp  mainwindow.cpp~
my_browser/gui/ui/: mainwindow.ui
